# AppImageQt5run

./: .gitignore  CMakeLists.txt  LSBRelease.cpp  LSBRelease.h  QtInfo.cpp  QtInfo.h  README.md  main.cpp
